--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".DetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
       
-        <activity android:name=".DetailActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".ListActivity" />
         <activity android:name=".MypageActivity" />
         <activity android:name=".EditActivity" />
