--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'org.altbeacon:android-beacon-library:2.12'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
