교수 강의 목록(ProfLectureActivtiy), 교수 마이페이지(ProfMypageActivity) 업데이트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".ListActivity" />
-        <activity android:name=".MypageActivity" />
-        <activity android:name=".EditActivity" />
+        <activity android:name=".DetailActivity"/>
+        <activity android:name=".ListActivity"/>
+        <activity android:name=".MypageActivity"/>
+        <activity android:name=".EditActivity"/>
+        <activity android:name=".ProfLectureActivity"/>
+        <activity android:name=".ProfMypageActivity"/>
         <service android:name=".BeaconService"/>
 
     </application>
