교수 학생 목록, 교수 학생 출석 상태 목록 업데이트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         <activity android:name=".EditActivity"/>
         <activity android:name=".ProfLectureActivity"/>
         <activity android:name=".ProfMypageActivity"/>
+        <activity android:name=".ProfStudentActivity"/>
+        <activity android:name=".ProfStateActivity"/>
         <service android:name=".BeaconService"/>
 
     </application>
